Przejście na 3.5.7, add-opens, Kryo, eliminacja lambdy